# poly-cool

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
benches/: cubic_roots.rs  eval.rs  quadratic_roots.rs
src/: accurate.rs  arbitrary.rs  cubic.rs  lib.rs  poly.rs  poly_dyn.rs  quadratic.rs  yuksel.rs
