[package]
name = "poly-cool"
version = "0.2.0"
edition = "2024"
description = "Polynomial root-finding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jneem/poly-cool"

[features]
arbitrary = ["dep:arbitrary"]
dashu-float = ["dep:dashu-float"]

[dependencies]
arbitrary = { version = "1.4.1", optional = true }
arrayvec = { version = "0.7.6", default-features = false }
dashu-float = { version = "0.4.3", optional = true }

[dev-dependencies]
arbitrary = "1.4.1"
arbtest = "0.3.2"
criterion = "0.7.0"
dashu-float = "0.4.3"
kurbo = "0.11.3"

[[bench]]
name = "cubic_roots"
harness = false

[[bench]]
name = "quadratic_roots"
harness = false
